gcc/testsuite/gfortran.dg/equiv_8.f90
! { dg-do compile }
!
! PR fortran/41755
!
      common /uno/ aa
      equivalence (aa,aaaaa)   (bb,cc) ! { dg-error "Expecting a comma in EQUIVALENCE" }
      end
